Use java immutable collections instead of guava